# gta5-script-decompiler

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/decompiler/: Cargo.toml
crates/decompiler/src/: lib.rs
crates/decompiler/src/common/: bubble_sort.rs  mod.rs  parented_list.rs
crates/decompiler/src/decompiler/: cfg_reducer.rs  control_flow.rs  decompiler_data.rs  function.rs  function_graph.rs  mod.rs  script_globals.rs  script_statics.rs  stack.rs  stack_entry.rs  structs.rs  value_type.rs
crates/decompiler/src/decompiler/decompiled/: decompiled_function.rs  mod.rs  statement.rs
crates/decompiler/src/disassembler/: instruction.rs  instruction_info.rs  mod.rs  opcodes.rs
crates/decompiler/src/formatters/: assembly_formatter.rs  code_builder.rs  cpp_formatter.rs  mod.rs
crates/decompiler/src/parser/: assembly_parser.rs  instruction.rs  mod.rs  opcodes.rs  read_pointer.rs  script.rs  script_header.rs  util.rs
crates/decompiler/src/resources/: cross_map.rs  from_json_file_error.rs  mod.rs  natives.rs
crates/decompiler/src/script/: mod.rs
crates/decompiler/src/script/ysc/: mod.rs  ysc_header.rs  ysc_header_parser.rs  ysc_header_parser_factory.rs  ysc_parser.rs
crates/decompiler/src/script/ysc/header_parsers/: mod.rs  pc_ysc_header_parser.rs
crates/gta5-script-decompiler/: Cargo.toml
crates/gta5-script-decompiler/src/: main.rs
crates/gta5-script-decompiler/src/parser/: mod.rs  script_header.rs
