[package]
name = "ysc-decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gta5-script-decompiler = { path = "../decompiler" }
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
indicatif = "0.17.3"
console = "0.15.7"
glob = "0.3.1"
